samples/_failures_safe/1761264132_6d7db7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffd781cd.c: In function ‘process_string’:
./samples/SAFE/__tmp_ffd781cd.c:153:16: error: missing terminating " character
  153 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_ffd781cd.c:153:9: error: expected expression at end of input
  153 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_ffd781cd.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffd781cd.c:153:9: error: expected declaration or statement at end of input
